 
#######################################################################
# Library QgarLib, graphics analysis and recognition                  #
# Copyright (C) 2002  Qgar Project, LORIA                             #
#                                                                     #
# This library is free software; you can redistribute it and/or       #
# modify it under the terms of the GNU Lesser General Public          #
# License version 2.1, as published by the Free Software Foundation.  #
#                                                                     #
# This library is distributed in the hope that it will be useful,     #
# but WITHOUT ANY WARRANTY; without even the implied warranty of      #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.                #
# See the GNU Lesser General Public License for more details.         #
#                                                                     #
# The GNU Lesser General Public License is included in the file       #
# LICENSE.LGPL, in the root directory of the Qgar packaging. See      #
# http://www.gnu.org/licenses/lgpl.html for the terms of the licence. #
# To receive a paper copy, write to the Free Software Foundation,     #
# Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.       #
#                                                                     #
# Contact Project Qgar for any information:                           #
#   LORIA - équipe Qgar                                               #
#   B.P. 239, 54506 Vandoeuvre-lès-Nancy Cedex, France                #
#   email: qgar-contact@loria.fr                                      #
#   http://www.qgar.org/                                              #
#######################################################################



# @file CMakiLists.txt
# 
# @brief Configuration file of QAtextGraphicSeparation application directory: /Qgar/QgarApp/QAtextGraphicSeparation directory
#
# @author <a href="mailto:qgar-develop@loria.fr?subject=Qgar fwd Vitor Vasconcelos">Vitor Vasconcelos</a>
# @date   June 6, 2007  17:22
# @since  Qgar 3.0
#

#
# IMPORTANT
# ----------------------------------------------------------------------
# No project is created. This file is supposed to be called by another 
# instance of CMake in upper directory QgarApps
#
# The Cmake MUST no be executed direct in this file because it inherits
# configurations from its parent and, any Makefile generated by direct
# execution will cause SEVERAL compilation errors.
#

# Inclusion of all modules needed
INCLUDE (CheckIncludeFiles)
INCLUDE (CheckLibraryExists)

# VARIABLES SECTION
# -------------------------------------------------------------------------
# Brief description of all variables used in this script
#
# ${APPSOURCE}: Used to keep the standard. It's not useful, because only one file is added to source.
# ${WIN32}: CMake internal variable. TRUE on Windows and FALSE otherwise.
# ${QGARLIB}: Inherited variable. Contains the path and name of libqgar.
# ${EXECUTABLE_NAME}: Name of application

# The command below stores all source files names to a variable
# ${APPSOURCE} to be used later on

  SET(APPSOURCE QAtextGraphicSeparation.cpp)

# See CMake documentation to know more about it.
SET (EXECUTABLE_NAME "QAtextGraphicSeparation")
ADD_EXECUTABLE (${EXECUTABLE_NAME} ${APPSOURCE})

# Link with libqgar
TARGET_LINK_LIBRARIES (${EXECUTABLE_NAME} ${LIBQGAR_NAME})

# Install files
INSTALL (TARGETS ${EXECUTABLE_NAME} RUNTIME 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

INSTALL (FILES ${EXECUTABLE_NAME}_descr.xml 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/qgar)

# Installs the application in qgar-x.y.z directory
# for packaging purposes
#INSTALL (TARGETS ${EXECUTABLE_NAME} RUNTIME 
#	DESTINATION ${CMAKE_INSTALL_PREFIX}/${QGAR_NAME_VERSION}/QgarApps/${EXECUTABLE_NAME})
